--- a/champions-backend/src/main/resources/application.properties
+++ b/champions-backend/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.show-sql=false
 logging.level.org.hibernate.SQL=DEBUG
+
+logging.level.root=INFO
+logging.level.com.yourpackage=DEBUG
+logging.file.name=application.log
