--- a/champions-backend/build.gradle
+++ b/champions-backend/build.gradle
@@ -1,16 +1,23 @@
+buildscript {
+	repositories {
+		mavenCentral()
+	}
+}
+
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'java-library'
+	id 'application'
 }
 
 group = 'com.govtech'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 configurations {
@@ -19,8 +26,16 @@ configurations {
 	}
 }
 
+configurations.all {
+	resolutionStrategy.cacheDynamicVersionsFor(10, "minutes")
+}
+
 repositories {
 	mavenCentral()
+}
+
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
 }
 
 dependencies {
